syntax = "proto3";

option go_package = "github.com/wafi04/golang-backend/grpc/pb";

package pb;

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {}
    rpc ResendVerification(ResendVerificationRequest) returns (ResendVerificationResponse) {}
    rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}
    rpc RevokeSession(RevokeSessionRequest) returns (RevokeSessionResponse) {}
    rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {}
    rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
    rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse) {}
}

message User {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string password_hash = 5;
    bool is_email_verified = 6;
    bool is_active = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
    int64 last_login_at = 10;
    repeated string active_sessions = 11;
    string picture = 12;  
}
message RequestPasswordResetRequest {
    string email = 1;
}

message RequestPasswordResetResponse {
    bool success = 1;
    string reset_token = 2;
    int64 expires_at = 3;
}
message ResetPasswordRequest {
    string reset_token = 1;
    string old_password = 2; 
    string new_password = 3;
}

message ResetPasswordResponse {
    bool success = 1;
    string message = 2;
    int64 updated_at = 3;
}

// Modified UserInfo message with picture field
message UserInfo {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    bool is_email_verified = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    int64 last_login_at = 8;
    string picture = 9;  // New field for user profile picture
}

// Modified CreateUserRequest with picture field
message CreateUserRequest {
    string name = 1;
    string email = 2;
    string role = 3;
    string password = 4;
    string picture = 5; 
    string ip_address  = 6;
    string device_info  = 7;
}

// Modified CreateUserResponse with picture field
message CreateUserResponse {
    string user_id = 1;
    string access_token = 2;
    string name = 3;
    string email = 4;
    string role = 5;
    int64 created_at = 6;
    string picture = 7; 
    optional Session  session_info =8;
}

// Modified UpdateUserRequest with picture field
message UpdateUserRequest {
    string user_id = 1;
    optional string name = 2;
    optional string email = 3;
    optional string password = 4;
    optional string role = 5;
    optional string picture = 6;  // New field for user profile picture
}

// All other messages remain unchanged
message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    optional UserInfo user = 1;
}
// Session related messages
message Session {
    string session_id = 1;
    string user_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    string device_info = 5;
    string ip_address = 6;
    int64 created_at = 7;
    int64 expires_at = 8;
    int64 last_activity_at = 9;
    bool is_active = 10;
}

// Verification Token related messages
message VerificationToken {
    string token = 1;
    string user_id = 2;
    string type = 3;  
    int64 created_at = 4;
    int64 expires_at = 5;
    bool is_used = 6;
}

message LoginRequest {
    string email = 1;
    string password = 2;
    string device_info = 3;
    string ip_address = 4;
}

message LoginResponse {
    string access_token = 1;
    string user_id = 2;
    UserInfo user_info = 3;
    SessionInfo session_info = 4;
    int64 expires_at = 5;
}

message SessionInfo {
    string session_id = 1;
    string device_info = 2;
    string ip_address = 3;
    int64 created_at = 4;
    int64 last_activity_at = 5;
}

message LogoutRequest {
    string access_token = 1;
    string session_id = 2;
    string  user_id  =3;
}

message LogoutResponse {
    bool success = 1;
}

message ValidateTokenRequest {
    string access_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string session_id = 3;
    string role = 4;
    int64 expires_at = 5;
}

message RefreshTokenRequest {
    string refresh_token = 1;
    string session_id = 2;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_at = 3;
}


message UpdateUserResponse {
    string user_id = 1;
    int64 updated_at = 2;
}

message VerifyEmailRequest {
    string verification_token = 1;
    string verify_code = 2;  
}

message VerifyEmailResponse {
    bool success = 1;
    string user_id = 2;
    string message = 3;  
}

message ResendVerificationRequest {
    string user_id = 1;
    string type = 2;  
    string token = 3;  
}

message ResendVerificationResponse {
    bool success = 1;
    string verification_token = 2;
    int64 expires_at = 3;
    string verify_code = 4;  
}

message GetSessionRequest {
    string session_id = 1;
}

message GetSessionResponse {
    SessionInfo session_info = 1;
}

message RevokeSessionRequest {
    string user_id = 1;
    string session_id = 2;
}

message RevokeSessionResponse {
    bool success = 1;
}

message ListSessionsRequest {
    string user_id = 1;
}

message ListSessionsResponse {
    repeated SessionInfo sessions = 1;
}

